--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
       </li>
       
       <li>
-        <%= link_to 'マイページ', user_path(current_use.id) %>
+        <%= link_to 'マイページ', user_path(current_user.id) %>
       </li>
       
       <li>
