--- a/app/views/post_images/index.html.erb
+++ b/app/views/post_images/index.html.erb
@@ -13,7 +13,7 @@
   
   <p>ユーザーネーム：<%= post_image.user.name %></p>
   
-  <p><%= link_to "#{post_image.post_comments.count} コメント", post_image_path(post_image) %></p>
+  <p><%= link_to "#{post_image.post_comments.count} コメント", post_image_path(post_image.id) %></p>
 
 </div>
 
